--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,6 @@
+/*  E5FCC2   9DE0AD   45ADA8   547980   594F4F */
 .jumbotron {
-  background-color: #247BA0; /* 247BA0, 70C1B3, B2DBBF, F3FFBD, FF1654 */
+  background-color: #45ada8;
   color: #fff;
   padding: 100px 25px;
   font-family: 'Montserrat', sans-serif;
@@ -28,7 +29,7 @@
   width: 100px;
   height: 1px;
   margin: 20px auto 20px;
-  background: #70C1B3;
+  background: #9DE0AD;
 }
 h4 {
   margin-bottom: 30px;
@@ -47,29 +48,47 @@ h4 {
   color: inherit;
 }
 .bg-odd {
-  background-color: #f6f6f6;
+  background-color: #594F4F;
 }
-#about.h4 {
-  /*font-size: 150%;*/
+.bg-odd .heading {
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 30px;
+  font-weight: 700;
+  color: #eee;
+}
+.bg-odd .heading:after {
+  content: '';
+  display: block;
+  width: 100px;
+  height: 1px;
+  margin: 20px auto 20px;
+  background: #9DE0AD;
 }
 #about p {
   font-size: 130%;
   text-align: justify;
 }
+footer {
+  background-color: #594F4F;
+  color: #eee;
+}
+footer a {
+  color: #45ada8;
+}
 .progress-heading {
   margin-bottom: 10px;
 }
 .progress-bar-custom-1 {
-  background-color: #247BA0;
+  background-color: #45ADA8;
 }
 .progress-bar-custom-2 {
-  background-color: #418fb1;
+  background-color: #45CDAB;
 }
 .progress-bar-custom-3 {
-  background-color: #6aadca;
+  background-color: #75ADB8;
 }
 .progress-bar-custom-4 {
-  background-color: #0a678f;
+  background-color: #359DA8;
 }
 @media(max-width: 1000px){
   .container-fluid {
