--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,100 +1,5 @@
-/*  E5FCC2   9DE0AD   45ADA8   547980   594F4F */
-.jumbotron {
-  background-color: #45ada8;
-  color: #fff;
-  padding: 100px 25px;
-  font-family: 'Montserrat', sans-serif;
-}
-.jumbotron .link {
-  color: #fff;
-}
-.container-fluid {
-  padding: 60px 100px;
-  text-align: left;
-}
-#header a {
-  padding: 0 5px;
-}
-#header p {
-  font-size: 18px;
-}
-.heading {
-  font-family: 'Montserrat', sans-serif;
-  margin-bottom: 30px;
-  font-weight: 700;
-}
-.heading:after {
-  content: ' ';
-  display: block;
-  width: 100px;
-  height: 1px;
-  margin: 20px auto 20px;
-  background: #9DE0AD;
-}
-h4 {
-  margin-bottom: 30px;
-}
-.thumbnail {
-  padding: 0 0 15px 0;
-  border: none;
-  border-radius: 0;
-}
-.thumbnail img {
-  width: 100%;
-  height: 100%;
-  margin-bottom: 10px;
-}
-.thumbnail a {
+#link-group a {
+  margin-left: 8px;
+  margin-right: 8px;
   color: inherit;
-}
-.bg-odd {
-  background-color: #594F4F;
-}
-.bg-odd .heading {
-  font-family: 'Montserrat', sans-serif;
-  margin-bottom: 30px;
-  font-weight: 700;
-  color: #eee;
-}
-.bg-odd .heading:after {
-  content: '';
-  display: block;
-  width: 100px;
-  height: 1px;
-  margin: 20px auto 20px;
-  background: #9DE0AD;
-}
-#about p {
-  font-size: 130%;
-  text-align: justify;
-}
-footer {
-  background-color: #594F4F;
-  color: #eee;
-}
-footer a {
-  color: #45ada8;
-}
-.progress-heading {
-  margin-bottom: 10px;
-}
-.progress-bar-custom-1 {
-  background-color: #45ADA8;
-}
-.progress-bar-custom-2 {
-  background-color: #45CDAB;
-}
-.progress-bar-custom-3 {
-  background-color: #75ADB8;
-}
-.progress-bar-custom-4 {
-  background-color: #359DA8;
-}
-@media(max-width: 1000px){
-  .container-fluid {
-    padding: 20px 30px;
-  }
-  #about {
-    text-align: justify;
-  }
 }
